# hospitalbed-surface-cleaning

./: CMakeLists.txt  README.md  package.xml
cfg/: Tuning.cfg
include/objectrecognition/: kdtree.h  newkdtree.h  ros_control.h  ros_crop.h
launch/: crop.launch  horizontal.launch  new_map.launch  rosbag.launch  verticle.launch
pcd/: new_test.pcd  test.pcd
src/: new_detector.cpp  ros_control.cpp  ros_control_node.cpp  ros_crop.cpp  ros_crop_node.cpp  ros_verticle.cpp
text/: new_data.txt
